--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ src/generated/resources/.cache
 
 # Files from Forge MDK
 forge*changelog.txt
+/gradle/wrapper/gradle-wrapper.jar
+/gradle/wrapper/gradle-wrapper.properties
+/files/WizardHatModel.bbmodel
